<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:foregroundGravity="fill_horizontal|center_vertical"
    android:orientation="horizontal">

    <Button
        android:id="@+id/list_item_btn_play"
        android:layout_width="@dimen/display_size_4"
        android:layout_height="@dimen/display_size_5"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/spacer_size_1h"
        android:background="@android:drawable/ic_media_play"
        android:backgroundTint="@android:color/holo_green_light"
        android:gravity="center"
        android:hint="@string/list_item_btn_hint"
        android:textSize="@dimen/text_size_1" />

    <TextView
        android:id="@+id/list_item_word"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/display_size_4"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/spacer_size_1h"
        android:layout_marginStart="@dimen/spacer_size_1h"
        android:layout_weight="5"
        android:gravity="center"
        android:hint="@string/list_item_word_hint"
        android:lines="1"
        android:linksClickable="false"
        android:maxLines="1"
        android:minLines="1"
        android:textIsSelectable="false"
        android:textSize="@dimen/text_size_3" />

    <ImageButton
        android:id="@+id/list_item_btn_delete"
        android:layout_width="@dimen/display_size_4"
        android:layout_height="@dimen/display_size_4"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/spacer_size_1h"
        android:layout_weight="1"
        android:background="@android:drawable/ic_menu_delete"
        android:contentDescription="@string/list_item_btn_delete"
        android:gravity="center" />

</LinearLayout>
